tests/core/snapshots/s3-error-missing-key.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "@s3 operation GetPresignedUrl requires a 'key' field",
    "trace": [
      "Query",
      "getFileUrl",
      "@s3"
    ],
    "description": null
  }
]
