tests/core/snapshots/s3-get-presigned-url.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  getFileUrl(key: String!): String
}

schema {
  query: Query
}
