tests/core/snapshots/s3-list-objects.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar JSON

type Query {
  listFiles(prefix: String): JSON
}

schema {
  query: Query
}
