tests/core/snapshots/s3-list-objects.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream @link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  listFiles(prefix: String): JSON
  @s3(bucket: "my-bucket", operation: "LIST", prefix: "{{.args.prefix}}")
}
