tests/core/snapshots/s3-multiple-connections.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  getBackupUrl(key: String!): String
  getPrimaryUrl(key: String!): String
}

schema {
  query: Query
}
