tests/core/snapshots/s3-put-presigned-url.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  putFileUrl(key: String!, contentType: String): String
}

schema {
  query: Query
}
