tests/core/snapshots/showcase.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(showcase: true)
@upstream
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  not_user: User @http(url: "http://jsonplaceholder.typicode.com/users/1")
}

type User {
  not_id: Int
  not_name: String
}
