tests/core/snapshots/test-add-link-to-empty-config.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(src: "link-expr.graphql", type: Config)
@link(src: "link-enum.graphql", type: Config)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

enum Foo {
  BAR
  BAZ
}

type Query {
  foo: Foo @http(url: "http://jsonplaceholder.typicode.com/foo")
  hello: String @expr(body: "Hello from server")
}
