tests/core/snapshots/test-alias-on-enum.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server(batchRequests: true)
@upstream(batch: { delay: 1, headers: [], maxSize: 100 })
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

enum Department {
  ENGINEERING
  HUMAN_RESOURCE @alias(options: ["HR"])
  MARKETING
}

type DTA {
  departments: [Department]
}

type Query {
  color: DTA @expr(body: { departments: ["ENGINEERING", "MARKETING", "HR"] })
}
